--- a/Backend/NetService_EventsManager/NetService_EventsManager/NetService_EventsManager.csproj
+++ b/Backend/NetService_EventsManager/NetService_EventsManager/NetService_EventsManager.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="GeoTimeZone" Version="5.3.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
